--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
+    "@langchain/community": "0.3.33",
+    "@langchain/mistralai": "0.2.0",
+    "@langchain/openai": "0.4.4",
     "@types/selenium-webdriver": "^4.1.28",
     "axios": "^1.8.1",
     "i18next": "^24.2.2",
     "langchain": "^0.3.19",
+    "langsmith": "^0.3.11",
     "language-detect": "^1.1.0",
     "next": "15.2.0",
     "react": "^19.0.0",
