--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npm install && next build",
+    "clean": "rimraf .next",
+    "build": "npm run clean && npm install && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,11 +34,12 @@
     "@eslint/eslintrc": "^3",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/react-speech-recognition": "^3.9.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "typescript": "^5"
+    "rimraf": "^6.0.1",
+    "typescript": "^5.4.3"
   }
 }
