--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "clean": "rimraf .next",
-    "build": "npm run clean && npm install && next build",
+    "build": "npm run clean && npm install && npm install --save @types/react@19.0.10 @types/react-dom@19.0.4 && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +15,10 @@
     "@langchain/mistralai": "0.2.0",
     "@langchain/openai": "0.4.4",
     "@tabler/icons-react": "^3.30.0",
+    "@types/node": "^20",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/react-speech-recognition": "^3.9.6",
     "@types/selenium-webdriver": "^4.1.28",
     "axios": "^1.8.1",
     "cheerio": "^1.0.0-rc.12",
@@ -33,10 +37,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/cheerio": "^0.22.35",
-    "@types/node": "^20",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/react-speech-recognition": "^3.9.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "rimraf": "^6.0.1",
