--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^15.4.1",
     "react-speech-recognition": "^3.10.0",
     "selenium-webdriver": "^4.29.0",
+    "transformers": "^3.1.0",
     "web-speech-cognitive-services": "^8.1.1"
   },
   "devDependencies": {
